--- a/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
+++ b/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
@@ -18,7 +18,7 @@ BOOT_OPTION_TMPL: >
     - ImageType_$(1) :
         name         : Image Type
         type         : Combo
-        option       : 0:Default, 1:Android, 2:ClearLinux, 3:Acrn, 4:Fastboot, 0x1E:Extra image, 0x9E:PreOS image, 0xFF:Not used
+        option       : 0:Default, 1:Android, 2:ClearLinux, 3:Acrn, 4:Fastboot, 0x1E:Extra image, 0x9E:PreOS image, 0xBE: Misc image, 0xFF:Not used
         help         : >
                        Specify boot image type.
                        Extra and PreOS image type indicates this option is not a standalone boot option. Instead, it provides additional information for the previous boot option.
@@ -30,7 +30,7 @@ BOOT_OPTION_TMPL: >
     - BootFlags_$(1) :
         name         : Boot Flags
         type         : Combo
-        option       : 0:Normal, 4:PreOS support, 8:Extra image support, 12:PreOS and extra image support, 16:Mender support, 20:PreOS and mender support
+        option       : 0:Normal, 1: Misc support, 4:PreOS support, 8:Extra image support, 9:Misc and extra image support, 12:PreOS and extra image support, 16:Mender support, 20:PreOS and mender support
         help         : >
                        Specify boot flags (options)
                        When extra image or PreOS image is selected, need config them in next boot option with proper image type.
