--- a/Platform/AlderlakeBoardPkg/CfgData/CfgDataDefAdln.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgDataDefAdln.yaml
@@ -41,11 +41,9 @@ configs:
 
   - !include Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
 
-  - !include Platform/CommonBoardPkg/CfgData/CfgData_Tcc.yaml
-
   - !include CfgData_PayloadSelection_Adln.yaml
 
-  - !include CfgData_BootOption.yaml
+  - !include CfgData_BootOption_Adln.yaml
 
   - !include CfgData_Memory.yaml
 
