--- a/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/MeteorlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -489,6 +489,14 @@
                      SLP_S3 Minimum Assertion Width Policy. Default is PchSlpS350ms.
       length       : 0x01
       value        : 0x3
+  - EnableTcssCovTypeA :
+      name         : Type C Port x Convert to TypeA
+      type         : EditNum, HEX, (0x00,0xFFFFFFFF)
+      option       : $EN_DIS
+      help         : >
+                     Enable / Disable(default) Type C Port x Convert to TypeA
+      length       : 0x04
+      value        : {0x0, 0x0, 0x0, 0x0}
   - SiliconRsvd  :
       length       : 0x02
       value        : 0x00
