--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_MemSpd.yaml
@@ -115,3 +115,16 @@
                      Pointer to SPD data in Memory
       length       : 0x200
       value        : {FILE: Spd_Data_AdlN_Lpddr5.bin}
+
+- MEM_SPD8_CFG_DATA :
+  - !expand { CFGHDR_TMPL : [ MEM_SPD8_CFG_DATA, 0x8F8, 0, 0 ] }
+  - MemorySpdPtr8 :
+      name         : Memory SPD Data 8
+      type         : Table
+      option       : >
+                     0:1:HEX, 1:1:HEX, 2:1:HEX, 3:1:HEX, 4:1:HEX, 5:1:HEX, 6:1:HEX, 7:1:HEX,
+                     8:1:HEX, 9:1:HEX, A:1:HEX, B:1:HEX, C:1:HEX, D:1:HEX, E:1:HEX, F:1:HEX
+      help         : >
+                     Pointer to SPD data in Memory
+      length       : 0x200
+      value        : {FILE: Spd_Data_AdlN_Up7000.bin}
