--- a/Platform/RaptorlakeBoardPkg/CfgData/CfgData_Memory.yaml
+++ b/Platform/RaptorlakeBoardPkg/CfgData/CfgData_Memory.yaml
@@ -334,9 +334,9 @@
   - ActiveSmallCoreCount :
       name         : Number of active small cores
       type         : Combo
-      option       : 0x0:Disable all small cores, 0x1:1, 0x2:2, 0x3:3, 0xff:Active all small cores
+      option       : 0x0:Disable all small cores, 0x1:1, 0x2:2, 0x3:3, 0x4:4, 0x8:8, 0xff:Active all small cores
       help         : >
-                     Number of active small cores(Depends on Number of small cores). Default 0xFF means to active all system supported small cores. <b>0xFF- Active all small cores</b>; 0- Disable all small cores; 1- 1; 2- 2; 3- 3;
+                     Number of active small cores(Depends on Number of small cores). Default 0xFF means to active all system supported small cores. <b>0xFF- Active all small cores</b>; 0- Disable all small cores; 1- 1; 2- 2; 3- 3; 4- 4;
       length       : 0x0001
       value        : 0xff
   - BiosSize     :
