--- a/Platform/RaptorlakeBoardPkg/CfgData/CfgDataDefRplp.yaml
+++ b/Platform/RaptorlakeBoardPkg/CfgData/CfgDataDefRplp.yaml
@@ -41,6 +41,8 @@ configs:
 
   - !include Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
 
+  - !include Platform/CommonBoardPkg/CfgData/CfgData_Tcc.yaml
+
   - !include CfgData_PayloadSelection_Rplp.yaml
 
   - !include CfgData_BootOptionRplp.yaml
