feat: [ADLN] expose FSP-S .ScsEmmcEnable UPD option to SBL config data
The FSP-S UPD has an option .ScsEmmcEnable that cannot be modified from
SBL configuration.  This change adds the SILICON_CFG_DATA.PchEmmcEnable
option to set the UPD value. (Default setting is enabled as before).

Signed-off-by: Bruno Achauer <bruno.achauer@intel.com>

--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -367,6 +367,13 @@
                      Enable/Disable UFS controllers 1 and 2. 0- Disable; 1- Enable.
       length       : 0x02
       value        : {0x00, 0x00}
+  - PchEmmcEnable :
+      name         : Enable PCH eMMC
+      type         : EditNum, HEX, (0x0, 0x1)
+      help         : >
+                     Enable/Disable eMMC controller. 0- Disable; 1- Enable.
+      length       : 0x01
+      value        : 0x01
   - PchIshI2cEnable :
       condition    : $(COND_S0IX_DIS)
       name         : Enable PCH ISH I2C pins assigned
